--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app_name",
+  
   "version": "0.0.1",
   "description": "",
   "main": "Gruntfile.js",
@@ -15,5 +15,11 @@
   },
   "dependencies": {
     "embark-status": "^0.2.1"
-  }
+  },
+
+  "name":"Avon",
+    "whisper-identity":"avon",
+    "dapp-url":"xavivives.github.io/Avon/"
+
+
 }
